--- a/index.html
+++ b/index.html
@@ -63,28 +63,28 @@
       </li>
       <li>
         <a>
-          3- Melhoria do padrão de vida das pessoas A indústria contribui para a
-          melhoria do padrão de vida da população na opinião de 94% dos
+          3- Melhoria do padrão de vida das pessoas: A indústria contribui para
+          a melhoria do padrão de vida da população na opinião de 94% dos
           entrevistados.
         </a>
       </li>
       <li>
         <a>
-          4- Desenvolvimento de tecnologia/inovação As empresas industriais
+          4- Desenvolvimento de tecnologia/inovação: As empresas industriais
           contribuem para aumentar a inovação e a evolução da tecnologia no país
           segundo 92% dos brasileiros.
         </a>
       </li>
       <li>
         <a>
-          5- Redução das desigualdades regionais O papel da indústria para
+          5- Redução das desigualdades regionais: O papel da indústria para
           diminuir as diferenças regionais é importante ou muito importante para
           88% das pessoas.
         </a>
       </li>
       <li>
         <a>
-          6- Exportações Os produtos industrializados são considerados
+          6- Exportações: Os produtos industrializados são considerados
           importantes ou muito importantes para as exportações na opinião de 87%
           das pessoas. Para 83%, o aumento das exportações gera mais empregos no
           Brasil.
